@@ -46,7 +46,7 @@ struct FileListItem:public Panel::panelitem, NonCopyable
 	char PrevSelected;
 	char ShowFolderSize;
 	char ShortNamePresent;
-	HighlightFiles::highlight_iterator ColorsIterator;
+	const HighlightFiles::highlight_item* Colors;
 
 	DWORD NumberOfLinks;
 	DWORD NumberOfStreams;
@@ -85,6 +85,7 @@ struct FileListItem:public Panel::panelitem, NonCopyable
 		PrevSelected(),
 		ShowFolderSize(),
 		ShortNamePresent(),
+		Colors(),
 		NumberOfLinks(),
 		NumberOfStreams(),
 		UserFlags(),
@@ -114,6 +115,7 @@ struct FileListItem:public Panel::panelitem, NonCopyable
 		PrevSelected(),
 		ShowFolderSize(),
 		ShortNamePresent(),
+		Colors(),
 		NumberOfLinks(),
 		NumberOfStreams(),
 		UserFlags(),
@@ -149,7 +151,7 @@ struct FileListItem:public Panel::panelitem, NonCopyable
 		PrevSelected = rhs.PrevSelected;
 		ShowFolderSize = rhs.ShowFolderSize;
 		ShortNamePresent = rhs.ShortNamePresent;
-		ColorsIterator = rhs.ColorsIterator;
+		Colors = rhs.Colors;
 		NumberOfLinks = rhs.NumberOfLinks;
 		NumberOfStreams = rhs.NumberOfStreams;
 		UserFlags = rhs.UserFlags;
