@@ -1,4 +1,8 @@
-﻿drkns 02.01.2014 02:55:55 +0200 - build 3752
+﻿drkns 02.01.2014 04:33:52 +0200 - build 3753
+
+1. Продолжение 3752.
+
+drkns 02.01.2014 02:55:55 +0200 - build 3752
 
 1. Оптимизация, аналогичная 3401: каждый элемент файловой панели занимает примерно на 200 байт меньше памяти.
 
